--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Hello Coursera</title>
     </head>
     <body>
-        <h1>Hello Coursera Students!</h1>
+        <h1>Hello Coursera Students! updating the text for testing</h1>
     </body>
 </html>
